[project]
name = "wdp"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Stemler",email = "stemlertho@gmail.com"}
]
license = {text = "GPL-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pysimplegui (>=5.0.8,<6.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
